[package]
name = "solana-esp-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Lightweight no_std Solana client for ESP (esp-hal)"


[lib]
crate-type = ["rlib"]


[features]
# Default to minimal `no_std` (no features enabled)
default = ["net-reqwless"]
# Enable std for host-side testing and the host-demo example.
std = []
# Optional TLS / RPC helpers (off by default for minimal size)
tls = []
net-reqwless = ["dep:reqwless", "dep:embedded-nal-async"]
net-smoltcp = []


[dependencies]
ed25519-compact = { workspace = true, default-features = false }
five8 = "1.0.0"
reqwless = { version = "0.13.0", default-features = false, features = [
    "embedded-tls",
], optional = true }
embedded-nal-async = { version = "0.8.0", optional = true }
heapless = "0.9.1"
base64 = { version = "0.22", default-features = false }


[dev-dependencies]


[package.metadata.docs.rs]
features = ["std"]
