[package]
edition = "2021"
name    = "esp32s3-demo"
version = "0.1.0"

[[bin]]
name = "esp32s3-demo"
path = "./src/bin/main.rs"

[dependencies]
solana-esp-sdk = { path = "../../solana-esp-sdk", default-features = false}

esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "1.0.0-rc.0", features = ["esp32s3", "unstable"] }
embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "dns",
  "tcp",
  "udp",
] }
esp-alloc = "0.8.0"
esp-println = { version = "0.15.0", features = ["esp32s3"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.5.0"
esp-hal-embassy = { version = "0.9.0", features = ["esp32s3"] }
esp-wifi = { version = "0.15.0", default-features = false, features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }


# [profile.dev]
# # Rust debug is too slow.
# # For debug builds always builds with some optimization
# opt-level = "s"

# [profile.release]
# codegen-units    = 1     # LLVM can perform better optimizations using a single thread
# debug            = 2
# debug-assertions = false
# incremental      = false
# lto              = 'fat'
# opt-level        = 's'
# overflow-checks  = false
